# DoloroServer

./: .env.example  .gitignore  Cargo.toml
doloro_web/: index.html  package.json
doloro_web/src/: main.js
doloro_web/src/components/: HelloWorld.vue  NewPishocker.vue  PiShockerCard.vue  PiShockerList.vue
doloro_web/src/layouts/default/: AppBar.vue
doloro_web/src/plugins/: pishock.js  pishock_store.js
doloro_web/src/router/: index.js
doloro_web/src/views/: MainInterface.vue
migrations/2023-03-17-192245_create_pishock_storage/: down.sql  up.sql
src/: api.rs  main.rs  models.rs  schema.rs
src/api/: pishock.rs
