[package]
name = "doloro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.55"
diesel = { version = "2.0.3", features = ["sqlite", "chrono"] }
poem-openapi = { version = "2.0.3", features = ["swagger-ui"]}
diesel_migrations = "2.0.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.16"
pishock_rs = "2.1.0"
chrono = "0.4.24"
dotenv = "0.15.0"